<resources>
    <string name="app_name">AndroidUpax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Android studio</string>
    <string name="email">android@hotmmail.com</string>

    <string name="action_settings">Settings</string>

    <string name="home_item">Home</string>
    <string name="product_item">Productos</string>
    <string name="purchase_item">Carrito</string>
    <string name="order_item">Ordenes</string>
    <string name="bill_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="config_item">Configuración</string>
    <string name="customer_item">Clientes</string>
    <string name="no_data">Aun sin registros</string>

    <string name="title">Titulo</string>
    <string name="popularity">popularity</string>
    <string name="original_language">original language</string>
    <string name="overview">Description</string>
    <string name="vote_count">vote_count</string>


    <string name="action_edit">Editar</string>
    <string name="action_add">Agregar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_save">Guardar</string>
    <string name="title_activity_add_edit">Añadir/Editar </string>
    <string name="field_error">Ingresa un valor</string>
    <string name="action_delete">Eliminar</string>


    <string name="choose_an_option">Elige una opción</string>
    <string name="take_photo">Tomar foto</string>
    <string name="take">Capturar una foto</string>
    <string name="gallery">Galería</string>
    <string name="select_a">Seleccione una foto</string>

</resources>